<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/full_login"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"

        />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardImageFullLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="54dp"
        app:layout_constraintBottom_toTopOf="@+id/contBtns"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvName">

        <ImageView
            android:id="@+id/ivFullLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/contBtns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <Button
            android:id="@+id/btnToSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sign_in"
            />

        <Button
            android:id="@+id/btnToSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sign_up"
            />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
</layout>